tests/machine/x/cpp/group_by_multi_join.error
line 21: ../../../tests/machine/x/cpp/group_by_multi_join.cpp:21:13: error: ‘ps’ was not declared in this scope
   21 |   decltype((ps.cost * ps.qty)) value;
      |             ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:21:23: error: ‘ps’ was not declared in this scope
   21 |   decltype((ps.cost * ps.qty)) value;
      |                       ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:21:13: error: ‘ps’ was not declared in this scope
   21 |   decltype((ps.cost * ps.qty)) value;
      |             ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:21:23: error: ‘ps’ was not declared in this scope
   21 |   decltype((ps.cost * ps.qty)) value;
      |                       ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join.cpp:79:11: warning: narrowing conversion of ‘<lambda closure object><lambda()>::<lambda(auto:1)>().<lambda()>::<lambda(auto:1)>(<lambda()>::<lambda()>())’ from ‘int’ to ‘bool’ [-Wnarrowing]
   77 |         g.key, ([&](auto v) {
      |                ~~~~~~~~~~~~~~
   78 |           return std::accumulate(v.begin(), v.end(), 0);
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   79 |         })(([&]() {
      |         ~~^~~~~~~~~
   80 |           std::vector<decltype(std::declval<__struct4>().value)> __items;
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   81 |           for (auto r : g.items) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~
   82 |             __items.push_back(r.value);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   83 |           }
      |           ~
   84 |           return __items;
      |           ~~~~~~~~~~~~~~~
   85 |         })())});
      |         ~~~~~

 20 |   decltype(std::declval<__struct3>().part) part;
 21 |   decltype((ps.cost * ps.qty)) value;
 22 | };
